# Bazel build for the DuckDB query engine.
#
# The engine opens a per-query DuckDB connection, attaches the
# storage's row stream as a DuckDB table, runs the transpiled SQL,
# and streams the results back as a `RowSource`.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# arrow_to_bq is the Arrow-flavored chunk -> BigQuery cell converter.
# Kept as its own cc_library so the unit tests can link it without
# pulling in GoogleSQL: it depends on libduckdb only.
cc_library(
    name = "arrow_to_bq",
    srcs = [
        "arrow_to_bq.cc",
        "arrow_to_bq_read.cc",
        "arrow_to_bq_types.cc",
    ],
    hdrs = [
        "arrow_to_bq.h",
        "arrow_to_bq_internal.h",
    ],
    deps = [
        "//backend/schema",
        "//backend/storage",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
    ],
)

# DuckDbExecutor is the `coordinator::Executor` adapter that owns
# the transpiler / per-query DuckDB connection / Arrow result-row
# path. The coordinator hands it an already-analyzed
# `ResolvedStatement`; the executor never re-parses the SQL itself.
cc_library(
    name = "duckdb_executor",
    srcs = [
        "duckdb_executor_ddl.cc",
        "duckdb_executor_dml.cc",
        "duckdb_executor_literals.cc",
        "duckdb_executor_query.cc",
    ],
    hdrs = [
        "duckdb_executor.h",
        "duckdb_executor_internal.h",
    ],
    deps = [
        ":arrow_to_bq",
        "//backend/catalog:storage_table",
        "//backend/catalog:virtual_table",
        "//backend/engine",
        "//backend/engine/coordinator:executor",
        "//backend/engine/duckdb/transpiler",
        "//backend/engine/duckdb/udf:registrar",
        "//backend/engine/semantic:value",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "//third_party/duckdb",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

# Drives `DuckDbExecutor` directly with a pre-resolved statement (the
# coordinator interface). Covers the executor's contract for each
# already-analyzed `ResolvedStatement` shape.
cc_test(
    name = "duckdb_executor_test",
    srcs = ["duckdb_executor_test.cc"],
    deps = [
        ":duckdb_executor",
        "//backend/engine/duckdb/transpiler",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage/duckdb:duckdb_storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "arrow_to_bq_test",
    srcs = ["arrow_to_bq_test.cc"],
    deps = [
        ":arrow_to_bq",
        "//backend/schema",
        "//backend/storage",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
    ],
)
