# Bazel build for the GoogleSQL reference-impl engine.
#
# Links GoogleSQL's analyzer + reference-impl evaluator (under
# `@googlesql//`) so the engine actually executes queries.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "reference_impl_engine",
    srcs = ["reference_impl_engine.cc"],
    hdrs = ["reference_impl_engine.h"],
    deps = [
        "//backend/catalog:googlesql_catalog",
        "//backend/catalog:storage_table",
        "//backend/engine",
        "//backend/schema",
        "//backend/schema:googlesql_to_bq",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:evaluator_base",
        "@googlesql//googlesql/public:evaluator_table_iterator",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_test(
    name = "reference_impl_engine_test",
    srcs = ["reference_impl_engine_test.cc"],
    deps = [
        ":reference_impl_engine",
        "//backend/catalog:googlesql_catalog",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "//backend/storage:memory",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        # `analyzer_options` lets the test mirror the engine's
        # AnalyzerOptions when it constructs its `GoogleSqlCatalog`,
        # so the catalog gets the same `LanguageOptions` snapshot the
        # engine itself uses when it calls `AnalyzeStatement`.
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
    ],
)
