# Bazel build for the semantic executor.
#
# `semantic_executor` is the local row/array/value interpreter the
# `LocalCoordinatorEngine` dispatches to on the
# `Disposition::kSemanticExecutor` route. The package owns:
#
#   * The structured error surface (`error`) the gateway maps onto
#     BigQuery REST `error.errors[0].reason` tokens.
#   * The unit-of-evaluation `Value` type plus type-system helpers
#     for converting to / from the wire-facing `storage::Value`.
#   * `EvalExpr`, the resolved-AST walker that drives expression
#     evaluation across the BigQuery type system.
#   * `SemanticExecutor`, the per-route `Executor` adapter the
#     coordinator dispatches to.
#   * A `RowSource` adapter that lets downstream plans compose with
#     `DuckDbExecutor` output.
#
# See `docs/ENGINE_POLICY.md` for the full
# scope and design constraints.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("//:googlesql_deps.bzl", "GOOGLESQL_SQL_FUNCTION_DEPS")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "error",
    srcs = ["error.cc"],
    hdrs = ["error.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:cord",
    ],
)

cc_test(
    name = "error_test",
    srcs = ["error_test.cc"],
    deps = [
        ":error",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "value",
    srcs = ["value.cc"],
    hdrs = [
        "eval_context.h",
        "value.h",
    ],
    deps = [
        ":error",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@googlesql//googlesql/public:civil_time",
        "@googlesql//googlesql/public:interval_value",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:uuid_value",
        "@googlesql//googlesql/public:value",
    ],
)

cc_test(
    name = "value_test",
    srcs = ["value_test.cc"],
    deps = [
        ":error",
        ":value",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "system_variables",
    srcs = ["system_variables.cc"],
    hdrs = ["system_variables.h"],
    deps = [
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
    ],
)

cc_library(
    name = "eval_expr",
    srcs = ["eval_expr.cc"],
    hdrs = ["eval_expr.h"],
    deps = [
        ":error",
        ":frame_stack",
        ":system_variables",
        ":value",
        "//backend/engine/semantic/functions:dispatch",
        "//backend/engine/semantic/functions:operator_funcs",
        "//backend/engine/semantic/stubs:dispatch",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        # `googlesql/public/constant.h` is bundled into the prebuilt
        # artifact's catch-all header set; the public wrapper API
        # exposes it transitively through `:simple_catalog` (which
        # `#include`s `constant.h` for `SimpleConstant`). There is no
        # standalone `:constant` wrapper today.
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:civil_time",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ] + GOOGLESQL_SQL_FUNCTION_DEPS,
)

cc_library(
    name = "scan_eval",
    srcs = ["scan_eval.cc"],
    hdrs = ["scan_eval.h"],
    deps = [
        ":error",
        ":eval_expr",
        ":value",
        "//backend/catalog:storage_table",
        "//backend/engine/semantic/array_struct:array_scan",
        "//backend/engine/semantic/functions:specialized_funcs",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_test(
    name = "eval_expr_test",
    srcs = ["eval_expr_test.cc"],
    deps = [
        ":error",
        ":eval_expr",
        ":frame_stack",
        ":scan_eval",
        ":value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "frame_stack",
    srcs = ["frame_stack.cc"],
    hdrs = ["frame_stack.h"],
    deps = [
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "frame_stack_test",
    srcs = ["frame_stack_test.cc"],
    deps = [
        ":frame_stack",
        ":value",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "row_source",
    srcs = ["row_source.cc"],
    hdrs = ["row_source.h"],
    deps = [
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "row_source_test",
    srcs = ["row_source_test.cc"],
    deps = [
        ":row_source",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    deps = [
        ":error",
        ":eval_expr",
        ":row_source",
        ":scan_eval",
        ":value",
        "//backend/engine",
        "//backend/engine/coordinator:executor",
        "//backend/engine/semantic/dml:dml_executor",
        "//backend/engine/semantic/script:assert_stmt",
        "//backend/engine/semantic/script:script_driver",
        ":system_variables",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_test(
    name = "executor_test",
    srcs = ["executor_test.cc"],
    deps = [
        ":error",
        ":executor",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)
