# Bazel build for the semantic executor.
#
# `semantic_executor` is the local row/array/value interpreter the
# `LocalCoordinatorEngine` dispatches to on the
# `Disposition::kSemanticExecutor` route. The package owns:
#
#   * The structured error surface (`error`) the gateway maps onto
#     BigQuery REST `error.errors[0].reason` tokens.
#   * The unit-of-evaluation `Value` type plus type-system helpers
#     for converting to / from the wire-facing `storage::Value`.
#   * `EvalExpr`, the resolved-AST walker that drives expression
#     evaluation across the BigQuery type system.
#   * `SemanticExecutor`, the per-route `Executor` adapter the
#     coordinator dispatches to.
#   * A `RowSource` adapter that lets downstream plans compose with
#     `DuckDbExecutor` output.
#
# See `docs/ENGINE_POLICY.md` for the full
# scope and design constraints.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load(
    "//:googlesql_deps.bzl",
    "GOOGLESQL_MATCH_RECOGNIZE_DEPS",
    "GOOGLESQL_SQL_FUNCTION_DEPS",
    "GOOGLESQL_SQL_TVF_DEPS",
)

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "error",
    srcs = ["error.cc"],
    hdrs = ["error.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:cord",
    ],
)

cc_test(
    name = "error_test",
    srcs = ["error_test.cc"],
    deps = [
        ":error",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "geography_value",
    srcs = ["geography_value.cc"],
    hdrs = ["geography_value.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "value",
    srcs = [
        "value.cc",
        "value_parameters.cc",
    ],
    hdrs = [
        "eval_context.h",
        "value.h",
    ],
    deps = [
        ":error",
        ":geography_value",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:civil_time",
        "@googlesql//googlesql/public:interval_value",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:uuid_value",
        "@googlesql//googlesql/public:value",
    ],
)

cc_test(
    name = "value_test",
    srcs = ["value_test.cc"],
    deps = [
        ":error",
        ":value",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "system_variables",
    srcs = ["system_variables.cc"],
    hdrs = ["system_variables.h"],
    deps = [
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
    ],
)

cc_library(
    name = "js_udf_runtime",
    srcs = ["js_udf_runtime.cc"],
    hdrs = ["js_udf_runtime.h"],
    deps = [
        ":error",
        ":value",
        "//backend/catalog:js_udf_registry",
        "//third_party/duktape",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "python_udf_runtime",
    srcs = ["python_udf_runtime.cc"],
    hdrs = ["python_udf_runtime.h"],
    deps = [
        ":error",
        ":value",
        "//backend/catalog:python_udf_registry",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "proto_helpers",
    srcs = ["proto_helpers.cc"],
    hdrs = ["proto_helpers.h"],
    deps = [
        ":error",
        ":value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_protobuf//:protobuf",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "expression_column_bindings",
    srcs = ["expression_column_bindings.cc"],
    hdrs = ["expression_column_bindings.h"],
    deps = [
        ":error",
        ":frame_stack",
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "eval_expr",
    srcs = [
        "eval_expr.cc",
        "eval_expr_calls.cc",
        "eval_expr_cast.cc",
        "eval_expr_cast_extended.cc",
        "eval_expr_cast_format.cc",
        "eval_expr_cast_helpers.cc",
        "eval_expr_cast_modifiers.cc",
        "eval_expr_dispatch.cc",
        "eval_expr_flatten.cc",
        "eval_expr_fn_dispatch.cc",
        "eval_expr_numeric.cc",
        "eval_expr_operators.cc",
        "eval_expr_proto.cc",
        "eval_expr_update_constructor.cc",
        "eval_udaf.cc",
    ],
    hdrs = [
        "eval_expr.h",
        "eval_expr_internal.h",
        "eval_udaf.h",
    ],
    deps = [
        ":error",
        ":frame_stack",
        ":js_udf_runtime",
        ":proto_helpers",
        ":python_udf_runtime",
        ":system_variables",
        ":value",
        "//backend/catalog:js_udf_registry",
        "//backend/catalog:python_udf_registry",
        "//backend/catalog:udf_registry",
        "//backend/engine/semantic/functions:datetime_funcs",
        "//backend/engine/semantic/functions:dispatch",
        "//backend/engine/semantic/functions:geog_funcs",
        "//backend/engine/semantic/functions:operator_funcs",
        "//backend/engine/semantic/functions:specialized_funcs",
        "//backend/engine/semantic/stubs:dispatch",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        # `googlesql/public/constant.h` is bundled into the prebuilt
        # artifact's catch-all header set; the public wrapper API
        # exposes it transitively through `:simple_catalog` (which
        # `#include`s `constant.h` for `SimpleConstant`). There is no
        # standalone `:constant` wrapper today.
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:civil_time",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
        "@com_google_protobuf//:protobuf",
    ] + GOOGLESQL_SQL_FUNCTION_DEPS,
)

cc_library(
    name = "outer_row_eval",
    srcs = ["outer_row_eval.cc"],
    hdrs = ["outer_row_eval.h"],
    deps = [
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_library(
    name = "scan_eval",
    srcs = [
        "eval_tvf.cc",
        "scan_eval.cc",
        "scan_eval_agg_having.cc",
        "scan_eval_agg_list.cc",
        "scan_eval_aggregate.cc",
        "scan_eval_materialize.cc",
        "scan_eval_materialize_relation_argument.cc",
        "scan_eval_analytic.cc",
        "scan_eval_sample.cc",
        "scan_eval_pipe.cc",
        "scan_eval_group_rows.cc",
        "scan_eval_match_recognize.cc",
        "scan_eval_scan_impl.cc",
    ],
    hdrs = [
        "eval_tvf.h",
        "scan_eval.h",
        "scan_eval_internal.h",
    ],
    deps = [
        ":error",
        ":eval_expr",
        ":frame_stack",
        ":outer_row_eval",
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@googlesql//googlesql/public:function",
        "@googlesql//googlesql/public:evaluator",
        "//backend/catalog:storage_table",
        "//backend/engine/semantic/array_struct:array_scan",
        "//backend/engine/semantic/functions:operator_funcs",
        "//backend/engine/semantic/functions:specialized_funcs",
        "//backend/engine/semantic/stubs:ml",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ] + GOOGLESQL_SQL_FUNCTION_DEPS + GOOGLESQL_SQL_TVF_DEPS +
    GOOGLESQL_MATCH_RECOGNIZE_DEPS,
)

cc_test(
    name = "eval_expr_test",
    srcs = [
        "eval_expr_extended_test.cc",
        "eval_expr_expression_column_test.cc",
        "eval_expr_test.cc",
        "eval_expr_test_fixture.h",
    ],
    deps = [
        ":error",
        ":eval_expr",
        ":expression_column_bindings",
        ":frame_stack",
        ":scan_eval",
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "eval_expr_proto_test",
    srcs = ["eval_expr_proto_test.cc"],
    deps = [
        ":eval_expr",
        ":scan_eval",
        ":value",
        "@com_google_googletest//:gtest_main",
        "@com_google_protobuf//:protobuf",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "eval_expr_update_constructor_test",
    srcs = ["eval_expr_update_constructor_test.cc"],
    deps = [
        ":eval_expr",
        ":scan_eval",
        ":value",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "scan_eval_privacy_aggregate_stub_test",
    srcs = ["scan_eval_privacy_aggregate_stub_test.cc"],
    deps = [
        ":scan_eval",
        ":value",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "scan_eval_aggregate_deferred_test",
    srcs = ["scan_eval_aggregate_deferred_test.cc"],
    deps = [
        ":scan_eval",
        ":value",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_library(
    name = "frame_stack",
    srcs = ["frame_stack.cc"],
    hdrs = ["frame_stack.h"],
    deps = [
        ":value",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "frame_stack_test",
    srcs = ["frame_stack_test.cc"],
    deps = [
        ":frame_stack",
        ":value",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "row_source",
    srcs = ["row_source.cc"],
    hdrs = ["row_source.h"],
    deps = [
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "row_source_test",
    srcs = ["row_source_test.cc"],
    deps = [
        ":row_source",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    deps = [
        ":error",
        ":eval_expr",
        ":frame_stack",
        ":row_source",
        ":scan_eval",
        ":value",
        "//backend/engine",
        "//backend/engine/coordinator:executor",
        "//backend/engine/semantic/dml:dml_executor",
        "//backend/engine/semantic/script:assert_stmt",
        "//backend/engine/semantic/script:assignment_stmt",
        "//backend/engine/semantic/script:declare_stmt",
        "//backend/engine/semantic/script:script_driver",
        ":system_variables",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_test(
    name = "executor_test",
    srcs = ["executor_test.cc"],
    deps = [
        ":error",
        ":executor",
        "//backend/engine",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)
