# Bazel build for the persistent, file-backed DuckDB `Storage` impl.
# Mirrors the CMake `backend_storage_duckdb` target
# (`//CMakeLists.txt`).
#
# `BIGQUERY_EMULATOR_HAS_DUCKDB=1` is set unconditionally here — the
# Bazel build is the canonical path for the full DuckDB-enabled
# emulator binary, so the no-DuckDB compile path that CMake exposes
# through `-DBIGQUERY_EMULATOR_ENABLE_DUCKDB=OFF` is intentionally
# unreachable from Bazel. The CMake side keeps the option around for
# host installs without libduckdb on PATH.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "duckdb_storage",
    srcs = ["duckdb_storage.cc"],
    hdrs = ["duckdb_storage.h"],
    local_defines = ["BIGQUERY_EMULATOR_HAS_DUCKDB=1"],
    deps = [
        "//backend/schema",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "//third_party/duckdb",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/types:span",
        "@com_google_protobuf//:protobuf",
    ],
)

# duckdb_storage_test is the Bazel mirror of the CMake
# `duckdb_storage_test` target. It exercises the Parquet round-trip
# story for AppendRows / ScanRows and the plan-38 CreateReadStream
# filter knobs (row_limit / offset). The cc_test inherits the
# `-Wl,-rpath,$ORIGIN` linker flag from //third_party/duckdb's
# cc_import so the libduckdb.so sibling that lands in the runfiles
# tree is discoverable without LD_LIBRARY_PATH; the duckdb_engine_test
# above relies on the same plumbing.
cc_test(
    name = "duckdb_storage_test",
    srcs = ["duckdb_storage_test.cc"],
    deps = [
        ":duckdb_storage",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)
