# Bazel build for the persistent, file-backed DuckDB `Storage` impl.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "duckdb_storage",
    srcs = [
        "duckdb_storage.cc",
        "duckdb_storage_catalog.cc",
        "duckdb_storage_literals.cc",
        "duckdb_storage_sql_render.cc",
        "duckdb_storage_list_literals.cc",
        "duckdb_storage_meta.cc",
        "duckdb_storage_read_stream.cc",
        "duckdb_storage_rows.cc",
        "duckdb_storage_routines.cc",
        "duckdb_storage_governance.cc",
        "duckdb_storage_version_log.cc",
        "duckdb_storage_version_log_tombstone.cc",
    ],
    hdrs = [
        "duckdb_storage.h",
        "duckdb_storage_governance.h",
        "duckdb_storage_internal.h",
        "duckdb_storage_version_log.h",
    ],
    deps = [
        "//backend/schema",
        "//backend/storage",
        "//proto:emulator_cc_proto",
        "//third_party/duckdb",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@com_google_absl//absl/types:span",
        "@com_google_protobuf//:protobuf",
        # Prebuilt exposes functions headers/symbols via :value + libgooglesql.a.
        "@googlesql//googlesql/public:value",
    ],
)

# Exercises the Parquet round-trip story for AppendRows / ScanRows
# and the CreateReadStream filter knobs (row_limit / offset).
# The cc_test inherits the `-Wl,-rpath,$ORIGIN` linker flag from
# //third_party/duckdb's cc_import so the libduckdb.so sibling that
# lands in the runfiles tree is discoverable without LD_LIBRARY_PATH;
# the duckdb_executor_test follow-up uses the same plumbing.
cc_test(
    name = "duckdb_storage_test",
    srcs = [
        "duckdb_storage_crud_test.cc",
        "duckdb_storage_read_test.cc",
        "duckdb_storage_test_fixture.cc",
        "duckdb_storage_test_fixture.h",
    ],
    deps = [
        ":duckdb_storage",
        "//backend/schema",
        "//backend/storage",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
    ],
)
