# `cc_binary` smoke target used by the bazel-wrappers smoke mode in
# `tools/googlesql-prebuilt/verify.sh`. The verifier copies this file
# and `smoke_wrappers.cc` into a tmp Bazel workspace next to the
# unpacked artifact, wires the artifact in via `local_path_override`
# in the tmp workspace's MODULE.bazel, and builds `:smoke`.

load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "smoke",
    srcs = ["smoke_wrappers.cc"],
    deps = [
        # Compatibility-surface inventory rows: `:error_helpers` and
        # `:script_executor` are frozen direct labels. Linking against
        # these wrappers exercises strict-deps narrowing, the `:_archive`
        # private cc_import, and the third-party deps the wrappers expose.
        "@googlesql_prebuilt_linux_amd64//googlesql/public:error_helpers",
        "@googlesql_prebuilt_linux_amd64//googlesql/scripting:script_executor",
    ],
)
